--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,9 +3,9 @@ source 'https://github.com/CocoaPods/Specs.git'
 use_frameworks!
 
 def common
-  pod 'RxSwift', '~> 5.0'
-  pod 'RxCocoa', '~> 5.0'
-  pod 'RealmSwift', '~> 5.0'
+  pod 'RxSwift', '>= 6.0.0-rc.1'
+  pod 'RxCocoa', '>= 6.0.0-rc.1'
+  pod 'RealmSwift'
 end
 
 target 'RxRealm_Example' do
@@ -17,6 +17,6 @@ end
 target 'RxRealm_Tests' do
   platform :ios, '9.0'
   common
-  pod 'RxBlocking', '~> 5.0'
+  pod 'RxBlocking', '>= 6.0.0-rc.1'
   pod 'RxRealm', :path => '../'
 end
